syntax = "proto3";

package raw_data;

message CumulativeDailyVolNormReturnsRequest {
    string symbol = 1;
}

message CumulativeDailyVolNormReturnsResponse {
    bytes series = 1;
}

service CumulativeDailyVolNormReturns {
    rpc get_cumulative_daily_vol_norm_returns (CumulativeDailyVolNormReturnsRequest) returns (CumulativeDailyVolNormReturnsResponse);
}3